--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-    "name": "metapost-syntax",
-    "displayName": "metapost-syntax",
+    "name": "vscode-metapost",
+    "displayName": "vscode-metapost",
     "description": "Syntax Highlighting for MetaPost (TeX).",
+    "publisher": "fjebaker",
+    "icon": "images/logo.jpg",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fjebaker/vscode-metapost"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.60.0"
