--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-metapost",
-    "displayName": "vscode-metapost",
+    "displayName": "Metapost",
     "description": "Syntax Highlighting for MetaPost (TeX).",
     "publisher": "fjebaker",
     "icon": "images/logo.jpg",
@@ -8,7 +8,7 @@
         "type": "git",
         "url": "https://github.com/fjebaker/vscode-metapost"
     },
-    "version": "0.0.1",
+    "version": "0.0.2",
     "engines": {
         "vscode": "^1.60.0"
     },
