--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "contributes": {
         "languages": [
             {
-                "id": "mp",
+                "id": "metapost",
                 "aliases": [
                     "MetaPost",
                     "mp"
@@ -31,8 +31,8 @@
         ],
         "grammars": [
             {
-                "language": "mp",
-                "scopeName": "source.mp",
+                "language": "metapost",
+                "scopeName": "source.metapost",
                 "path": "./syntaxes/mp.tmLanguage.json",
                 "embeddedLanguages": {
                     "meta.embedded.block.latex": "latex",
